# Training-for-AI-Engineer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  app.py  docker-compose.yaml  main.py  pyproject.toml  setup.cfg
checkpoints/glove_lstm/: Glove_Lstm_Model.h5
checkpoints/rnn/: RNN_model.h5
checkpoints/tokenizer/: tokenizer.pickle
config/: config.cfg
docs/: analysis.md  requirements.md
notebook/: EDA_CarsAds_nischal.ipynb  EDA_ISEAR_nischal.ipynb  Emotion_detection_using_BERT.ipynb  RNN_Implementation.ipynb  Word_Embeddings.ipynb  eda_car_ads_nishesh.ipynb  eda_isear_nishesh.ipynb
notebook/.ipynb_checkpoints/: eda_isear_nishesh-checkpoint.ipynb
notebooks/: eda_car_ads_sushmita.ipynb  eda_isear_sushmita.ipynb
src/models/: check.py  predict_model.py  tokenize_sentence.py  tokenizer.py  train_model.py
src/models/bert_model/: check.py  predict_model.py  tokenize_sentence.py
templates/: index.html  records.html  result.html
