[tool.poetry]
name = "training-for-ai-engineer"
version = "0.1.0"
description = ""
authors = ["sushmitafuse <sushmita@fusemachines.com>", "nischal-fuse  <nischal.maharjan@fusemachines.com>", "nisheshfuse <nishesh@fusemachines.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.2"
black = "^21.4b2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
pre-commit = "^2.12.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
